...

    <string name="kaleyra_stream_pin">The stream is pinned</string>
    <string name="kaleyra_stream_fullscreen">The stream is fullscreen</string>
    <string name="kaleyra_stream_mic_disabled">The microphone is disabled</string>
    <string name="kaleyra_stream_muted_for_you">The stream is muted for you</string>
    <string name="kaleyra_stream_you">You</string>
    <string name="kaleyra_stream_other_participants">others</string>
    <string name="kaleyra_stream_show_participants">Show participants</string>
    <string name="kaleyra_stream_show_actions">Show the stream\'s actions</string>
    <string name="kaleyra_stream_dimmed">Stream not selected</string>
    <string name="kaleyra_stream_audio_level">Audio level</string>

    <string name="kaleyra_participants_component_change_layout">Change Layout</string>
    <string name="kaleyra_participants_component_users_in_call">Users in call</string>
    <string name="kaleyra_participants_component_users_invited">Invited</string>
    <string name="kaleyra_participants_component_mosaic">Mosaic</string>
    <string name="kaleyra_participants_component_auto">Auto</string>
    <string name="kaleyra_participants_component_pin_stream">Pin stream</string>
    <string name="kaleyra_participants_component_unpin_stream">Unpin stream</string>
...
