...
import com.kaleyra.video_sdk.call.virtualbackground.state.VirtualBackgroundComponent
import com.kaleyra.video_sdk.call.whiteboard.WhiteboardComponent
import com.kaleyra.video_sdk.common.usermessages.model.UserMessage
import kotlinx.coroutines.ExperimentalCoroutinesApi
import kotlinx.coroutines.launch

internal val CallScreenModalSheetTag = "CallScreenModalSheetTag"

@OptIn(ExperimentalMaterial3Api::class)
@Composable
internal fun CallScreenModalSheet(
    modularComponent: ModularComponent?,
    sheetState: SheetState,
...
