...

    <style name="KaleyraCollaborationSuiteUI.Glass.RecyclerViewItem.Whiteboard" parent="KaleyraCollaborationSuiteUI.Glass.RecyclerViewItem">
        <item name="android:textViewStyle">@style/KaleyraCollaborationSuiteUI.TextView.GlassRecyclerViewItem.Whiteboard</item>
    </style>

    <style name="KaleyraCollaborationSuiteUI.TextView.GlassRecyclerViewItem.Whiteboard" parent="KaleyraCollaborationSuiteUI.TextView.GlassRecyclerViewItem">
        <item name="android:text">@string/kaleyra_strings_action_board</item>
    </style>

    <!-- BOTTOM NAVIGATION BAR -->
    <style name="KaleyraCollaborationSuiteUI.Glass.BottomNavigation.Menu" parent="KaleyraCollaborationSuiteUI.Glass.BottomNavigation">
        <item name="kaleyra_firstItemStyle">@style/KaleyraCollaborationSuiteUI.Glass.BottomActionItem.FirstItem.Menu</item>
        <item name="kaleyra_thirdItemStyle">@style/KaleyraCollaborationSuiteUI.Glass.BottomActionItem.ThirdItem.Menu</item>
...
