package com.kaleyra.video_sdk.call.screen

import androidx.activity.ComponentActivity
import androidx.compose.runtime.mutableStateOf
import androidx.compose.ui.test.assertIsDisplayed
import androidx.compose.ui.test.assertIsNotDisplayed
import androidx.compose.ui.test.junit4.createAndroidComposeRule
import androidx.compose.ui.test.onAllNodesWithContentDescription
import androidx.compose.ui.test.onNodeWithContentDescription
import androidx.compose.ui.test.onNodeWithTag
import androidx.compose.ui.test.onNodeWithText
import androidx.compose.ui.test.performClick
import com.kaleyra.video_sdk.R
import com.kaleyra.video_sdk.call.bottomsheet.model.FileShareAction
import com.kaleyra.video_sdk.call.bottomsheet.model.WhiteboardAction
import com.kaleyra.video_sdk.call.callactions.model.CallActionsUiState
import com.kaleyra.video_sdk.call.feedback.model.FeedbackUiState
import com.kaleyra.video_sdk.call.kicked.model.KickedMessageUiState
import com.kaleyra.video_sdk.call.screen.view.CallScreenModalSheetTag
import com.kaleyra.video_sdk.call.screen.view.vcallscreen.SidePanelTag
import com.kaleyra.video_sdk.call.stream.layoutsystem.model.StreamItem
import com.kaleyra.video_sdk.call.stream.model.StreamUiState
import com.kaleyra.video_sdk.call.whiteboard.model.WhiteboardRequest
import com.kaleyra.video_sdk.common.avatar.model.ImmutableUri
import com.kaleyra.video_sdk.common.immutablecollections.toImmutableList
import com.kaleyra.video_sdk.common.user.UserInfo
import kotlinx.coroutines.flow.update
import org.junit.Assert.assertEquals
import org.junit.Rule
import org.junit.Test

internal class CallScreenExpandedTest: CallScreenBaseTest() {

    @get:Rule
    val composeTestRule = createAndroidComposeRule<ComponentActivity>()

    @Test
    fun userClicksFileShareAction_fileShareSidePanelIsDisplayed() {
        callActionsUiState.value = CallActionsUiState(
            actionList = listOf(FileShareAction()).toImmutableList()
        )
        composeTestRule.setUpCallScreen()

        val fileShareText = composeTestRule.activity.getString(R.string.kaleyra_strings_action_files)
        // Check the button contained in the draggable part of the bottom sheet is displayed
        // The first of the list is the button contained in the fixed part of the bottom sheet, but not rendered by the internal adaptive layout.
        composeTestRule
            .onAllNodesWithContentDescription(fileShareText, useUnmergedTree = true)[0]
            .assertIsDisplayed()
            .performClick()

        val text = composeTestRule.activity.getString(R.string.kaleyra_strings_action_files)
        composeTestRule.onNodeWithText(text, useUnmergedTree = true).assertIsDisplayed()
        composeTestRule.onNodeWithTag(CallScreenModalSheetTag).assertDoesNotExist()
        composeTestRule.onNodeWithTag(SidePanelTag, useUnmergedTree = true).assertIsDisplayed()
    }

    @Test
    fun userClicksFileShareAction_fileShareSidePanelIsDisplayed_feedbackDisplayed_fileShareSidePanelNotDisplayed() {
        callActionsUiState.value = CallActionsUiState(
            actionList = listOf(FileShareAction()).toImmutableList()
        )
        composeTestRule.setUpCallScreen()

        val fileShareText = composeTestRule.activity.getString(R.string.kaleyra_strings_action_files)
        // Check the button contained in the draggable part of the bottom sheet is displayed
        // The first of the list is the button contained in the fixed part of the bottom sheet, but not rendered by the internal adaptive layout.
        composeTestRule
            .onAllNodesWithContentDescription(fileShareText, useUnmergedTree = true)[0]
            .assertIsDisplayed()
            .performClick()

        composeTestRule.onNodeWithTag(SidePanelTag, useUnmergedTree = true).assertIsDisplayed()

        feedbackUiState.value = FeedbackUiState.Display()

        composeTestRule.onNodeWithTag(SidePanelTag, useUnmergedTree = true).assertIsNotDisplayed()
    }

    @Test
    fun userClicksFileShareAction_fileShareSidePanelIsDisplayed_kickedDisplayed_fileShareSidePanelNotDisplayed() {
        callActionsUiState.value = CallActionsUiState(
            actionList = listOf(FileShareAction()).toImmutableList()
        )
        composeTestRule.setUpCallScreen()

        val fileShareText = composeTestRule.activity.getString(R.string.kaleyra_strings_action_files)
        // Check the button contained in the draggable part of the bottom sheet is displayed
        // The first of the list is the button contained in the fixed part of the bottom sheet, but not rendered by the internal adaptive layout.
        composeTestRule
            .onAllNodesWithContentDescription(fileShareText, useUnmergedTree = true)[0]
            .assertIsDisplayed()
            .performClick()

        composeTestRule.onNodeWithTag(SidePanelTag, useUnmergedTree = true).assertIsDisplayed()

        kickedUiState.value = KickedMessageUiState.Display()

        composeTestRule.onNodeWithTag(SidePanelTag, useUnmergedTree = true).assertIsNotDisplayed()
    }

    @Test
    fun userClicksTwiceFileShareAction_fileShareSidePanelIsClosed() {
        callActionsUiState.value = CallActionsUiState(
            actionList = listOf(FileShareAction()).toImmutableList()
        )
        composeTestRule.setUpCallScreen()

        val fileShareText = composeTestRule.activity.getString(R.string.kaleyra_strings_action_files)
        // Check the button contained in the draggable part of the bottom sheet is displayed
        // The first of the list is the button contained in the fixed part of the bottom sheet, but not rendered by the internal adaptive layout.
        val fileShareButton = composeTestRule.onAllNodesWithContentDescription(fileShareText, useUnmergedTree = true)[0]
        fileShareButton.performClick()

        val text = composeTestRule.activity.getString(R.string.kaleyra_strings_action_files)
        composeTestRule.onNodeWithText(text, useUnmergedTree = true).assertIsDisplayed()
        composeTestRule.onNodeWithTag(SidePanelTag, useUnmergedTree = true).assertIsDisplayed()

        fileShareButton.performClick()
        composeTestRule.onNodeWithText(text, useUnmergedTree = true).assertDoesNotExist()
        composeTestRule.onNodeWithTag(SidePanelTag, useUnmergedTree = true).assertDoesNotExist()
    }

    @Test
    fun userClicksWhiteboardAction_whiteboardSidePanelIsDisplayed() {
        callActionsUiState.value = CallActionsUiState(
            actionList = listOf(WhiteboardAction()).toImmutableList()
        )
        composeTestRule.setUpCallScreen()

        val whiteboardText = composeTestRule.activity.getString(R.string.kaleyra_strings_action_board)
        // Check the button contained in the draggable part of the bottom sheet is displayed
        // The first of the list is the button contained in the fixed part of the bottom sheet, but not rendered by the internal adaptive layout.
        composeTestRule
            .onAllNodesWithContentDescription(whiteboardText, useUnmergedTree = true)[0]
            .assertIsDisplayed()
            .performClick()

        val text = composeTestRule.activity.getString(R.string.kaleyra_strings_action_board)
        composeTestRule.onNodeWithText(text, useUnmergedTree = true).assertIsDisplayed()
        composeTestRule.onNodeWithTag(CallScreenModalSheetTag).assertDoesNotExist()
        composeTestRule.onNodeWithTag(SidePanelTag, useUnmergedTree = true).assertIsDisplayed()
    }

    @Test
    fun userClicksTwiceWhiteboardAction_whiteboardSidePanelIsClosed() {
        callActionsUiState.value = CallActionsUiState(
            actionList = listOf(WhiteboardAction()).toImmutableList()
        )
        composeTestRule.setUpCallScreen()

        val whiteboardText = composeTestRule.activity.getString(R.string.kaleyra_strings_action_board)
        // Check the button contained in the draggable part of the bottom sheet is displayed
        // The first of the list is the button contained in the fixed part of the bottom sheet, but not rendered by the internal adaptive layout.
        val whiteboardButton = composeTestRule.onAllNodesWithContentDescription(whiteboardText, useUnmergedTree = true)[0]
        whiteboardButton.performClick()

        val text = composeTestRule.activity.getString(R.string.kaleyra_strings_action_board)
        composeTestRule.onNodeWithText(text, useUnmergedTree = true).assertIsDisplayed()
        composeTestRule.onNodeWithTag(SidePanelTag, useUnmergedTree = true).assertIsDisplayed()

        whiteboardButton.performClick()
        composeTestRule.onNodeWithText(text, useUnmergedTree = true).assertDoesNotExist()
        composeTestRule.onNodeWithTag(SidePanelTag, useUnmergedTree = true).assertDoesNotExist()
    }

    @Test
    fun userClicksParticipantsButton_participantsSidePanelIsDisplayed() {
        composeTestRule.setUpCallScreen()

        val participantsText = composeTestRule.activity.getString(R.string.kaleyra_strings_description_show_participants)
        composeTestRule
            .onNodeWithContentDescription(participantsText, useUnmergedTree = true)
            .assertIsDisplayed()
            .performClick()

        val text = composeTestRule.activity.getString(R.string.kaleyra_participants_component_change_layout)
        composeTestRule.onNodeWithText(text, useUnmergedTree = true).assertIsDisplayed()
        composeTestRule.onNodeWithTag(CallScreenModalSheetTag).assertDoesNotExist()
        composeTestRule.onNodeWithTag(SidePanelTag, useUnmergedTree = true).assertIsDisplayed()
    }

    @Test
    fun userClicksTwiceParticipantsButton_participantsSidePanelIsClosed() {
        composeTestRule.setUpCallScreen()

        val participantsText = composeTestRule.activity.getString(R.string.kaleyra_strings_description_show_participants)
        val participantsButton = composeTestRule.onNodeWithContentDescription(participantsText, useUnmergedTree = true)
        participantsButton.performClick()

        val text = composeTestRule.activity.getString(R.string.kaleyra_participants_component_change_layout)
        composeTestRule.onNodeWithText(text, useUnmergedTree = true).assertIsDisplayed()
        composeTestRule.onNodeWithTag(SidePanelTag, useUnmergedTree = true).assertIsDisplayed()


        participantsButton.performClick()
        composeTestRule.onNodeWithText(text, useUnmergedTree = true).assertDoesNotExist()
        composeTestRule.onNodeWithTag(SidePanelTag, useUnmergedTree = true).assertDoesNotExist()
    }

    @Test
    fun userClicksMoreParticipantsStream_participantsSidePanelDisplayed() {
        val streamItem = StreamItem.MoreStreams(
            userInfos = listOf(
                UserInfo("1", "user1", ImmutableUri()),
                UserInfo("2", "user2", ImmutableUri())
            ).toImmutableList()
        )
        streamUiState.value = StreamUiState(streamItems = listOf(streamItem).toImmutableList())

        composeTestRule.setUpCallScreen()

        val otherText = composeTestRule.activity.getString(R.string.kaleyra_stream_other_participants, 2)
        composeTestRule
            .onNodeWithText(otherText, useUnmergedTree = true)
            .assertIsDisplayed()
            .performClick()
        val text = composeTestRule.activity.getString(R.string.kaleyra_participants_component_change_layout)
        composeTestRule.onNodeWithText(text, useUnmergedTree = true).assertIsDisplayed()
        composeTestRule.onNodeWithTag(SidePanelTag, useUnmergedTree = true).assertIsDisplayed()
    }

    @Test
    fun shouldShowFileShareComponentTrue_fileShareSidePanelDisplayed() {
        val shouldShowFileShareComponent = mutableStateOf(false)
        composeTestRule.setUpCallScreen(shouldShowFileShareComponent = shouldShowFileShareComponent)

        val fileShareTitle = composeTestRule.activity.getString(R.string.kaleyra_strings_action_files)
        composeTestRule.onNodeWithText(fileShareTitle).assertDoesNotExist()

        shouldShowFileShareComponent.value = true

        composeTestRule.onNodeWithText(fileShareTitle, useUnmergedTree = true).assertIsDisplayed()
        composeTestRule.onNodeWithTag(SidePanelTag, useUnmergedTree = true).assertIsDisplayed()
    }

    @Test
    fun fileShareSidePanelComponentIsDisplayed_onFileShareVisibilityInvoked() {
        var isFileShareDisplayed = false
        callActionsUiState.update {
            it.copy(actionList = listOf(FileShareAction()).toImmutableList())
        }
        composeTestRule.setUpCallScreen(onFileShareVisibility = { isFileShareDisplayed = it })

        val buttonText = composeTestRule.activity.getString(R.string.kaleyra_strings_action_files)
        composeTestRule
            .onNodeWithContentDescription(buttonText, useUnmergedTree = true)
            .assertIsDisplayed()
            .performClick()

        composeTestRule.waitForIdle()

        assertEquals(true, isFileShareDisplayed)
        composeTestRule.onNodeWithTag(SidePanelTag, useUnmergedTree = true).assertIsDisplayed()
    }

    @Test
    fun whiteboardSidePanelDisplayed_onWhiteboardVisibilityInvoked() {
        var isWhiteboardDisplayed = false
        callActionsUiState.update {
            it.copy(actionList = listOf(WhiteboardAction()).toImmutableList())
        }
        composeTestRule.setUpCallScreen(onWhiteboardVisibility = { isWhiteboardDisplayed = it })

        val buttonText = composeTestRule.activity.getString(R.string.kaleyra_strings_action_board)
        composeTestRule
            .onNodeWithContentDescription(buttonText, useUnmergedTree = true)
            .assertIsDisplayed()
            .performClick()

        composeTestRule.waitForIdle()

        assertEquals(true, isWhiteboardDisplayed)
        composeTestRule.onNodeWithTag(SidePanelTag, useUnmergedTree = true).assertIsDisplayed()
    }

    @Test
    fun showWhiteboardRequestReceived_whiteboardSidePanelDisplayed() {
        val whiteboardRequest = mutableStateOf(WhiteboardRequest.Show("username"))
        composeTestRule.setUpCallScreen(whiteboardRequest = whiteboardRequest)

        val text = composeTestRule.activity.getString(R.string.kaleyra_strings_action_board)
        composeTestRule.onNodeWithText(text, useUnmergedTree = true).assertIsDisplayed()
        composeTestRule.onNodeWithTag(SidePanelTag, useUnmergedTree = true).assertIsDisplayed()
    }

    @Test
    fun hideWhiteboardRequestReceived_whiteboardNotDisplayed() {
        callActionsUiState.update {
            it.copy(actionList = listOf(WhiteboardAction()).toImmutableList())
        }
        val whiteboardRequest = mutableStateOf<WhiteboardRequest?>(null)
        composeTestRule.setUpCallScreen(whiteboardRequest = whiteboardRequest)

        val buttonText = composeTestRule.activity.getString(R.string.kaleyra_strings_action_board)
        composeTestRule
            .onNodeWithContentDescription(buttonText, useUnmergedTree = true)
            .assertIsDisplayed()
            .performClick()

        val text = composeTestRule.activity.getString(R.string.kaleyra_strings_action_board)
        composeTestRule.onNodeWithText(text, useUnmergedTree = true).assertIsDisplayed()
        composeTestRule.onNodeWithTag(SidePanelTag, useUnmergedTree = true).assertIsDisplayed()

        whiteboardRequest.value = WhiteboardRequest.Hide("username")

        composeTestRule.onNodeWithText(text, useUnmergedTree = true).assertDoesNotExist()
        composeTestRule.onNodeWithTag(SidePanelTag, useUnmergedTree = true).assertDoesNotExist()
    }
}